# apricot-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml  results.json
.streamlit/: config.toml
apps/: streamlit_app.py
metadata/: Penn Machine Learning Benchmarks.csv  pmlb_data_processed.csv
notebooks/: amazon_reviews_feature_based.ipynb  metadata.ipynb
results/: results.json
src/: python_reimpl.py  python_reimpl_torch.py  test.py  utils.py
